# NiimbotB1_Simple_Print

./: README.md  example.py  niimbot_b1.py  pyproject.toml  requirements.txt
